More Positioning: the disposition of the elements of the page is correct now. known issues : the hole page is too big for the window, Alignments aren't good. -> fix after getting the proper icons for the buttons

--- a/Client/style.css
+++ b/Client/style.css
@@ -24,6 +24,11 @@ body,html {
 html * {
 	font-family: "Verdana", Geneva, sans-serif;
 	text-align: center;
+	float: left;
+}
+
+h1 {
+  font-size: 28px;
 }
 
 div.containerWithBorder {
